Add DDC logo, TUDelft-wind logo, and set default to wind template.

--- a/poster.tex
+++ b/poster.tex
@@ -2,8 +2,8 @@
 % !TeX spellcheck = en_US
 % $Id: example.tex,v 1.1.1.1 2003/11/12 19:21:55 vverdult Exp $
 %
-\documentclass[generic]{tudposter} % Template without wind turbines
-%\documentclass[wind]{tudposter} % Template with wind turbines
+%\documentclass[generic]{tudposter} % Template without wind turbines
+\documentclass[wind]{tudposter} % Template with wind turbines
 
 \usepackage{tikz}
 \usetikzlibrary{arrows,shadows,calc,positioning}
